[package]
name = "weibo-crawler"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ctrlc = "3.4.2"
regex = "1.10.2"
reqwest = "0.11.23"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
